--- a/pages/header.html
+++ b/pages/header.html
@@ -5,7 +5,7 @@
 
   <!-- Logo + nom entreprise -->
   <button id="logo-container" class="flex items-center space-x-4 cursor-pointer z-[1000]">
-    <img src="../img/img_4.png" alt="LuxFlora Logo" class="w-10 h-10 object-contain">
+    <img src="/img/img_4.png" alt="LuxFlora Logo" class="w-10 h-10 object-contain">
     <span class="text-xl">LUXFLORA</span>
   </button>
 
